Added company form

--- a/main/main/src/main/resources/application-prod.properties
+++ b/main/main/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 ##PostgreSQL parameters
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/accountingsystem
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=testtest
 ## Note: Podesete gi ovie tri parametri vo zavisnost kako na vas lokalno vi e namestena bazata.
 
 
