Added revenue sources pie chart

--- a/main/main/src/main/resources/application-prod.properties
+++ b/main/main/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 ##PostgreSQL parameters
-spring.datasource.url=jdbc:postgresql://localhost:5432/accountingsystem
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=testtest
+spring.datasource.password=test1234
 ## Note: Podesete gi ovie tri parametri vo zavisnost kako na vas lokalno vi e namestena bazata.
 
 
