Completed Google OAuth

--- a/main/main/src/main/resources/application.properties
+++ b/main/main/src/main/resources/application.properties
@@ -14,9 +14,9 @@
 spring.profiles.active=prod
 
 
-
 server.port=8080
 
-spring.security.oauth2.client.registration.google.client-id=801519415592-hsesu9ssugvi3sop4j7n55g5dqbci7nf.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=wxZ82IFoYSiCz4DSOTsQliRe
+spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
+
 
